--- a/index.html
+++ b/index.html
@@ -128,29 +128,31 @@ lit sem, mattis et tempus ut, dictum nec leo.</p>
 				<span>OUR CLIENTS SAY</span>
 			</div>
 			<div class="row">
+			   
 			    <!-- testimonials div -->
-				<div class="col-md-5 col-md-offset-1
-				            col-sm-5 col-sm-offset-1
+				<div class="col-lg-5 col-lg-offset-1
+				            col-md-5 col-md-offset-1
+				            col-sm-10 col-sm-offset-1
 				            col-xs-10 col-xs-offset-1">
 				    <div class="row">
-					    <div class="col-xs-12">
+					    <div class="col-xs-12 client">
 						    <div class="client-quote">
-							    <quote>Vestibulum malesuada hendreit odio, ut tristique magna pretium vel.Integer metus lectus [..]</quote>
+							    <q><span>Vestibulum malesuada hendreit odio, ut tristique magna pretium vel.Integer metus lectus [..]</span></q>
 						    </div>
 						    <div class="client-info">
 							    <img src="assets/client1.png" class="rounded-img">
-							    <p><span class="bold">Alice Knigh</span>-Client</p>
-							    <img src="assets/3stars.png">
+							    <p><span class="bold">Alice Knigh</span>- Client</p>
+							    <img src="assets/3stars.png" class="stars">
 						    </div>
 					    </div>
-					    <div class="col-xs-12">
+					    <div class="col-xs-12 client">
 						    <div class="client-quote">
-							    <quote>Nullam ut facilis justo. Ut tempus porta urna a accumsan. Praesent solicitudin augue nib [..]</quote>
+							    <q><span>Nullam ut facilis justo. Ut tempus porta urna a accumsan vel. Praesent solicitudin augue nib [..]</span></q>
 						    </div>
 						    <div class="client-info">
 							    <img src="assets/client2.png" class="rounded-img">
-							    <p><span class="bold">John Smith</span>-Client</p>
-							    <img src="assets/4stars.png">
+							    <p><span class="bold">John Smith</span>- Client</p>
+							    <img src="assets/4stars.png" class="stars">
 						    </div>					    
 					    </div>
 					    <div class="more" class="col-xs-12">
@@ -160,7 +162,19 @@ lit sem, mattis et tempus ut, dictum nec leo.</p>
 						    </a>
 					    </div>
 				    </div>        
-				</div>            
+				</div>   <!-- end testimonials div -->   
+
+				<div class="col-lg-5 
+				            col-md-5 
+				            col-sm-10 col-sm-offset-1
+				            col-xs-10 col-xs-offset-1">
+                     <iframe src="https://www.youtube.com/embed/iQsnObyii4Q" frameborder="0" allowfullscreen></iframe>
+
+                    <section class="video-desc">
+                    <h4>Watch our video</h4>
+                    <p>Nulla facilisi. Sed ac gravida lorem, at tristique erat. In lacus diam, vehicula vel velit in, vestibulum fringilla lorem. Donec vehicula libero in cursus ornare. Pellentesque sit amet consequat nulla. Donec eget mauris elementum, tincidunt ligula sed, malesuada nibh. Proin vel ante consequat, fringilla magna ac, bibendum sem. [..] </p>
+                    </section>
+				</div>     
 			</div> <!-- <div class="row"> -->
 		</div>
 		<footer>
