--- a/header.html
+++ b/header.html
@@ -1,17 +1,22 @@
 <div class="header container">
 	<div class="row">
+	    
+	    <!-- logo  -->
 		<div class="col-lg-3 col-lg-offset-1
-		            col-md-3 col-md-offset-1
-		            col-sm-3 col-sm-offset-1
-		            col-xs-6 col-xs-offset-1">
+		            col-md-3 col-md-offset-0
+		            col-sm-3 col-sm-offset-0
+		            col-xs-3 col-xs-offset-0">
 			<img class="img-responsive" src="assets/logo.png">
 		</div>
-		<div class="col-lg-6 col-lg-offset-1
+		
+		<!-- contact info % menu -->
+		<div class="col-lg-6 col-lg-offset-0
 		            col-md-6 col-md-offset-0
-		            col-sm-11 col-sm-offset-0
-		            col-xs-11 col-xs-offset-1
+		            col-sm-7 col-sm-offset-0
+		            col-xs-7 col-xs-offset-0
 		            remove-padding">
 
+			<!-- contact info row -->
 			<div class="contact-bubble row">
 			    <div class="col-xs-6 gray rounded-bubble">
 				    <a class="telephone" href="916.543.1543">
@@ -22,16 +27,19 @@
 			    </div>
 			    <div class="col-xs-6 blue rounded-bubble">
 				    <a class="quote" href="#">
-					    <span>GET A FREE QUOTE</a></span>
-						<img src="assets/down-arrow.png">
+					    <span>GET A FREE QUOTE</span>
+						<img src="assets/down-arrow.png"/>
 					</a>        
 			    </div>
-
 			</div>
 
-
-			<div class="row navigation">
-		        <div class="col-xs-12">
+			<!-- menu nav row -->
+			<div class="navigation row collapse-menu">
+		        <div class="col-xs-12 col-xs-pull-custom
+		                    col-sm-12 col-sm-pull-custom
+		                      pull-custom
+		                    col-md-12 col-md-pull-2
+		                    col-lg-12 col-lg-offset-2">
 					<nav class="site-nav">
 						<ul onClick="changeActiveMenu(event)">
 						    <li><a href="#home" class="here">HOME</a></li>
@@ -45,14 +53,18 @@
 				</div>
 			</div>
 
+		</div> <!-- contact info % menu -->
+	
+	</div> <!-- <div class="row"> -->
+    
+    <button class="collapse-menu">
+		<img src="assets/menu.png">
+	</button>
 
 
-		</div>
-		<div class="col-lg-1 
-		            col-md-1 
-		            col-sm-1
-		            col-xs-5">
+    <!-- certification -->
+		<div class="certification">
 		    <img class="img-responsive" src="assets/bbb.png">
 		</div>
-	</div> <!-- <div class="row"> -->
-</div>
+
+</div> <!--end <div class="header container"> -->
